# c4.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
crates/c4rs-core/: Cargo.toml
crates/c4rs-core/src/: constants.rs  lib.rs  validation.rs
crates/c4rs-core/src/c4/: code.rs  component.rs  container.rs  context.rs  macros.rs  (+4 more)
crates/c4rs-structurizr-dsl/: Cargo.toml
crates/c4rs-structurizr-dsl/src/: component_serializer.rs  container_serializer.rs  error.rs  hierarchy_serializer.rs  identifier_generator.rs  lib.rs  mod.rs  person_serializer.rs  relationship_serializer.rs  software_system_serializer.rs  structurizr_dsl.rs  structurizr_dsl_tests.rs  styles.rs  styles_serializer.rs  styles_serializer_tests.rs  traits.rs  validator.rs  views_serializer.rs  workspace_serializer.rs  workspace_serializer_tests.rs  writer.rs
examples/: api_test.rs  readme_test.rs  self_diagram.rs  smoke_test_1.rs  smoke_test_2.rs
src/: lib.rs  main.rs
src/c4/: code.rs  component.rs  container.rs  context.rs  element.rs  mod.rs  relationship.rs  value_types.rs
src/cli/: export.rs
src/serialization/: component_serializer.rs  container_serializer.rs  error.rs  hierarchy_serializer.rs  identifier_generator.rs  mod.rs  person_serializer.rs  relationship_serializer.rs  software_system_serializer.rs  structurizr_dsl.rs  styles_serializer.rs  traits.rs  validator.rs  views_serializer.rs  workspace_serializer.rs  writer.rs
src/serialization/templates/: elements.rs  helpers.rs  view.rs
tests/: dsl_output_golden_test.rs
tests/integration/: structurizr_playground_test.rs
(+2 files in other folders)
