[workspace]
members = ["crates/c4rs-core", "crates/c4rs-structurizr-dsl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Merge-42/c4rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
derive_more = { version = "2.1.1", features = ["full"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
askama = "0.15"
bon = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[package]
name = "c4rs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
c4rs-core = { path = "crates/c4rs-core" }
c4rs-structurizr-dsl = { path = "crates/c4rs-structurizr-dsl" }
